--- a/src/System.Diagnostics.Tracing/tests/System.Diagnostics.Tracing.Tests.csproj
+++ b/src/System.Diagnostics.Tracing/tests/System.Diagnostics.Tracing.Tests.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" 
+  xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.props))\dir.props" />
   <PropertyGroup>
     <ProjectGuid>{7E0E1B11-FF70-461E-99F7-C0AF252C0C60}</ProjectGuid>
@@ -26,6 +27,9 @@
     </Compile>
     <Compile Include="BasicEventSourceTest\TestsUserErrors.Windows.cs">
       <DependentUpon>TestsUserErrors.cs</DependentUpon>
+    </Compile>
+    <Compile Include="BasicEventSourceTest\TestsWriteEvent.Windows.cs">
+      <DependentUpon>TestsWriteEvent.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
