use netcoreapp-Unix for FreeBSD until we have real implementation

--- a/src/System.Net.NetworkInformation/src/Configurations.props
+++ b/src/System.Net.NetworkInformation/src/Configurations.props
@@ -3,9 +3,9 @@
   <PropertyGroup>
     <BuildConfigurations>
       uap-Windows_NT;
-      netcoreapp-FreeBSD;
       netcoreapp-Linux;
       netcoreapp-OSX;
+      netcoreapp-Unix;
       netcoreapp-Windows_NT;
     </BuildConfigurations>
   </PropertyGroup>
