--- a/src/System.IO.FileSystem.Watcher/src/Configurations.props
+++ b/src/System.IO.FileSystem.Watcher/src/Configurations.props
@@ -2,9 +2,9 @@
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <BuildConfigurations>
-      netcoreapp-FreeBSD;
       netcoreapp-Linux;
       netcoreapp-OSX;
+      netcoreapp-Unix;
       netcoreapp-Windows_NT;
       uap-Windows_NT;
     </BuildConfigurations>
