--- a/src/Native/Unix/System.Security.Cryptography.Native.Apple/CMakeLists.txt
+++ b/src/Native/Unix/System.Security.Cryptography.Native.Apple/CMakeLists.txt
@@ -26,6 +26,9 @@ set(NATIVECRYPTO_SOURCES
     pal_x509chain.cpp
 )
 
+# Temporary workaround for dotnet/corefx issue #30599
+add_compile_options(-Wno-deprecated-declarations)
+
 add_library(System.Security.Cryptography.Native.Apple
     SHARED
     ${NATIVECRYPTO_SOURCES}
