--- a/external/binplacePackages/Configurations.props
+++ b/external/binplacePackages/Configurations.props
@@ -13,6 +13,7 @@
       netstandard2.0;
       netstandard;
       netcoreapp2.0;
+      uap10.0.16299;
     </BuildConfigurations>
   </PropertyGroup>
 </Project>
