--- a/src/System.Globalization.Calendars/tests/CalendarTestWithConfigSwitch/System.Globalization.CalendarsWithConfigSwitch.Tests.csproj
+++ b/src/System.Globalization.Calendars/tests/CalendarTestWithConfigSwitch/System.Globalization.CalendarsWithConfigSwitch.Tests.csproj
@@ -14,7 +14,11 @@
     <SkipXunitRuntimeConfigCopying>true</SkipXunitRuntimeConfigCopying>
   </PropertyGroup>
   <ItemGroup>
-    <Content Include="xunit.console.netcore.runtimeconfig.json">
+    <Content Condition="'$(UsingCoverageDedicatedRuntime)'!='true'" Include="xunit.console.netcore.runtimeconfig.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <!-- If using coverage dedicated runtime the proper runtimeconfig needs to be ussed -->
+    <Content Condition="'$(UsingCoverageDedicatedRuntime)'=='true'" Include="coverage/xunit.console.netcore.runtimeconfig.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
